Admin Template changes

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
 
 <link rel="stylesheet" type="text/css"
 	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css"
+	href="/css/style.css" />
 
 <title>Registration</title>
 </head>
@@ -36,7 +38,8 @@
 	<br>
 	<br>
 	<div class="container">
-		<h2 style="align:center">Welcome User! You have been logged in successfully....</h2>
+		<h2 style="align: center">Welcome User! You have been logged in
+			successfully....</h2>
 	</div>
 
 	<script type="text/javascript"
