--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,1 +1,63 @@
 h1 {color:red;}
+
+body {
+    width: 90%;
+    margin: 0 auto;
+	background: #f8f9fa;
+}
+
+header {
+    margin-top: 20px;
+    padding-bottom: 5px;
+}
+
+.logo-row {
+    width: 250px;
+    margin: 0 auto;
+}
+
+.logo {
+    width: 100%;
+    height: 100px;
+    text-align: center;
+}
+
+.bg {
+	height: 60px;
+	position:relative;
+	top: -28px;
+	padding-left: 45%;
+}
+
+.container{
+	width: 80%;
+	height: 550px;
+	border: 2px solid #fff;
+	box-shadow: 0 15px 40px rgba(0,0,0,.5);
+}
+
+.container .left{
+	float: left;
+	width: 45%;
+	height: 100%;
+	background: url(/dist/img/login.png);
+	background-size: cover;
+	box-sizing: border-box;
+}
+
+.container .right{
+	float: right;
+	width: 50%;
+	height: 400px;
+	box-sizing: border-box;
+}
+
+.register{
+	float: right;
+}
+
+
+.formBox
+{
+	width:100%;
+}
