--- a/src/main/resources/templates/calperslogin.html
+++ b/src/main/resources/templates/calperslogin.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
-<html>
+<!-- <html>
 <head>
 	<title>Login page</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="/css/style.css"> -->
+
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<title>Login page</title>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" type="text/css"
+	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+
 </head>
 
 <body>
 	<header>
 		<div class="row">
 		  <div class="logo-row">
-		  	<a href="@{/}">
-			<img src="/dist/img/calpers_logo.png" alt="logo" class="logo">
+		  	<a th:href="@{/}">
+			<img src="/dist/img/calpers_logo.png" alt="logo" class="col-12">
 			</a>
 		  </div>
 		</div>
@@ -21,11 +33,18 @@
 		<div class = "left">
 		</div>
 		<div class = "right">
-		<div class="formBox">
 		<div class="form-container">
 		<img src="dist/img/login-small.png" class="bg">
-			<h4 class="text-center font-weight-bold">Sign in</h4>
-		<form action="@{/login}" method="post">
+			<h3 class="text-center font-weight-bold">Sign in</h3>
+			
+		<form th:action="@{/registration}" method="post">
+			<div th:if="${param.error}">
+					<div class="alert alert-danger">Invalid username or
+						password.</div>
+				</div>
+				<div th:if="${param.logout}">
+					<div class="alert alert-info">You have been logged out.</div>
+				</div>			
 			
 			  <div class="form-group">
 				<label for="username">Username</label>: <input type="text"
@@ -41,12 +60,19 @@
 			  
 			  <input type="submit" name="login-submit" id="login-submit" class="btn btn-primary btn-lg btn-block" value="Log In" />
 			<a href="#">I forgot my password</a>
-			<a class="register" href="/registration" >Not a member yet?</a>
+			<a class="register" th:href="@{/registration}" >Not a member yet?</a>
 		</form>
+		
+		
+		
 		</div>
 		</div>
 		</div>
 		</div>
+	<script type="text/javascript"
+		th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
+	<script type="text/javascript"
+		th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 </body>
 </html>  
 
