--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -35,8 +35,7 @@
 			<div class="col-md-6 col-md-offset-3">
 
 				<div th:if="${param.success}">
-					<div class="alert alert-info">You've successfully registered
-						to our awesome app!</div>
+					<div class="alert alert-info">You've successfully registered.A confirmation email is sent to the registered email.</div>
 				</div>
 
 				<h1>Registration</h1>
