--- a/src/main/resources/templates/uploadSignature.html
+++ b/src/main/resources/templates/uploadSignature.html
@@ -7,25 +7,62 @@
 
 <link rel="stylesheet" type="text/css"
 	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+<link
+	href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/south-street/jquery-ui.css"
+	rel="stylesheet">
+<link href="/css/jquery.signature.css" rel="stylesheet">
 
-<title>Upload Signature</title>
+<title>Signature Capture</title>
 </head>
 <body>
-<div class="container">
-	<div class="row">
-		<div class="col-md-6 col-md-offset-3">
-    	<h1> Please upload your signature </h1>
-    	
-		<form th:action=@{/uploadSignatureCall} method="post" enctype="multipart/form-data">
-	  	<h1>           </h1>
-      	<input type="file" name="signatureFile">
-      	<h1>           </h1>
-      	<input type="submit" name="submitFile" 
-									class="form-control btn btn-primary" value="Upload Signature" />
-      	
-     	</form> 
-     	</div>
-     </div>
-</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3">
+				<h2>Please upload or draw your signature</h2>
+
+				<form th:action=@{/uploadSignatureCall} method="post"
+					enctype="multipart/form-data">
+					<h1></h1>
+					<input type="file" name="signatureFile">
+					<h1></h1>
+					<input type="submit" name="submitFile"
+						class="form-control btn btn-primary" value="Upload Signature" />
+				</form>
+			</div>
+		</div>
+		<div class="row signpad-padding">
+			<div class="col-md-6 col-md-offset-3">
+				<div id="sig"></div>
+				<p style="clear: both;">
+					<button id="clear">Clear</button>
+					<button id="save">Save</button>
+				</p>
+			</div>
+		</div>
+	</div>
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script
+		src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="/js/jquery.signature.js"></script>
+	<script>
+		$(function() {
+			var sig = $('#sig').signature();
+			$('#disable').click(function() {
+				var disable = $(this).text() === 'Disable';
+				$(this).text(disable ? 'Enable' : 'Disable');
+				sig.signature(disable ? 'disable' : 'enable');
+			});
+			$('#clear').click(function() {
+				sig.signature('clear');
+			});
+			$('#json').click(function() {
+				alert(sig.signature('toJSON'));
+			});
+			$('#svg').click(function() {
+				alert(sig.signature('toSVG'));
+			});
+		});
+	</script>
 </body>
 </html>
