--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8" />
@@ -29,8 +29,49 @@
 
 	<br>
 	<br>
+ -->
+ 
+ <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-	<div class="container">
+<link rel="stylesheet" type="text/css"
+	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
+</head>
+<body>
+<header>
+<center>
+<img src="/dist/img/calpers_logo.png">
+
+</center>
+</header> 
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Calpers | Registration Page</title>
+  <!-- Tell the browser to be responsive to screen width -->
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+  <!-- Bootstrap 3.3.7 -->
+  <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="../../bower_components/font-awesome/css/font-awesome.min.css">
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="../../bower_components/Ionicons/css/ionicons.min.css">
+  <!-- Theme style -->
+  <link rel="stylesheet" href="../../dist/css/AdminLTE.min.css">
+  <!-- iCheck -->
+  <link rel="stylesheet" href="../../plugins/iCheck/square/blue.css">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
+  
+  <!-- <div class="container">
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 
@@ -38,10 +79,75 @@
 					<div class="alert alert-info">You've successfully registered.A confirmation email is sent to the registered email.</div>
 				</div>
 
-				<h1>Registration</h1>
+				<h1>Registration</h1> -->
+
+  <!-- Google Font -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+</head>
+<body class="hold-transition register-page">
+
+<div class="register-box">
+  <div class="register-logo">
+    <a href="../../index2.html"><b></b></a>
+  </div>
+
+  <div class="register-box-body">
+  <style>
+h1 {text-align: center;}
+   </style>
+  <h1 style="font-size:25px;">Registration</h1>
+	
 				<form th:action="@{/registration}" th:object="${user}" method="post">
 
-					<p class="error-message" th:if="${#fields.hasGlobalErrors()}"
+				<div class="form-group has-feedback">
+				        <input id="firstName" type="text" class="form-control" placeholder="First name">
+				        <span class="glyphicon glyphicon-user form-control-feedback"></span>
+				        </div>
+				      
+					  <div class="form-group has-feedback">
+				        <input id="lastName" type="text" class="form-control" placeholder="Last name">
+				        <span class="glyphicon glyphicon-user form-control-feedback"></span>
+				      </div>
+					  <div class="form-group has-feedback">
+				        <input type="text" class="form-control" placeholder="Contact No">
+				        <span class="glyphicon glyphicon-earphone form-control-feedback"></span>
+				      </div>
+				      <div class="form-group has-feedback">
+				        <input id="email" type="email" class="form-control" placeholder="Email">
+				        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
+				        </div>
+				      <div class="form-group has-feedback">
+				        <input id="password" type="password" class="form-control" placeholder="Password">
+				        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+				        </div>
+				      
+				      <div class="form-group has-feedback">
+				        <input id="confirmPassword" type="password" class="form-control" placeholder="Confirm password">
+				        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
+				      </div>
+					  <div class="form-group has-feedback">
+				        <input type="text" class="form-control" placeholder="Organization">
+				        <span class="glyphicon glyphicon-briefcase form-control-feedback"></span>
+				      </div>
+				      
+				<div class="row">
+				        <div class="col-xs-8">
+				          <div class="checkbox icheck">
+				            <label>
+				              <input type="checkbox"> I agree to the Terms and Conditions
+				
+				            </label>
+				          </div>
+				        </div>
+				      
+				        <!-- /.col -->
+				        <div class="col-xs-12">
+				          <button type="submit" class="btn btn-primary btn-block btn-flat">Sign up</button>
+				        </div>
+				        <!-- /.col -->
+				      </div>
+
+<!-- 					<p class="error-message" th:if="${#fields.hasGlobalErrors()}"
 						th:each="error : ${#fields.errors('global')}" th:text="${error}">Validation
 						error</p>
 
@@ -111,7 +217,7 @@
 						<span>Already registered? <a href="/" th:href="@{/login}">Login
 								here</a></span>
 					</div>
-
+ -->
 				</form>
 			</div>
 		</div>
