--- a/src/main/resources/templates/uploadSignature.html
+++ b/src/main/resources/templates/uploadSignature.html
@@ -14,6 +14,15 @@
 
 <title>Signature Capture</title>
 </head>
+<header id="registerheader">
+		<div class="row">
+		  <div class="logo-row">
+		  	<a th:href="@{/}">
+			<img src="/dist/img/calpers_logo.png" alt="logo" class="col-12">
+			</a>
+		  </div>
+		</div>
+</header>
 <body>
 	<div class="container">
 		<div class="row">
