--- a/src/main/resources/templates/uploadStatusView.html
+++ b/src/main/resources/templates/uploadStatusView.html
@@ -10,6 +10,17 @@
 	
 <title>Uplaod Status</title>
 </head>
+<header id="registerheader">
+		<div class="row">
+		  <div class="logo-row">
+		  <center>
+		  	<a th:href="@{/}">
+			<img src="/dist/img/calpers_logo.png" alt="logo" class="col-12">
+			</a>
+			</center>
+		  </div>
+		</div>
+</header>
 <body>
 <div class="container">
 	<div class="row">
