Account Activation page changes and notification changes

--- a/src/main/resources/templates/accountActivation.html
+++ b/src/main/resources/templates/accountActivation.html
@@ -99,18 +99,20 @@
 </center>
 </header> 
    
-    <div class="activation__subject">Activation Link</div>
+    <div class="activation__subject">Account Activation</div>
     <div class="activation__arrow"></div>
     <div class="activation__message">
       <div> Dear, <span class="activation__user">Customer</span>
         <!--<Username>-->
-        <br/>Thank you for choosing Calpers.</div>
+        <br/>Your account has been activated.</div>
     </div>
     <div class="activation__link">
       <div>
         Click on the following link to login your account:
       </div>
-      <div href="https://giant2016-csgb.fusionexsite.com/AnalyticsI/Login/" class="activation__btn">Login</div>
+      <div style="padding-top:45px;">
+      <a href="/login" class="activation__btn">Login</a>
+      </div>
     </div>
     <div class="activation__footer">
       Thank you. Sincerely,
