Changes to login page and upload signature page
Added szimek signature pad

--- a/src/main/resources/templates/calperslogin.html
+++ b/src/main/resources/templates/calperslogin.html
@@ -23,7 +23,7 @@
 		<div class="row">
 		  <div class="logo-row">
 		  	<a th:href="@{/}">
-			<img src="/dist/img/calpers_logo.png" alt="logo" class="col-12">
+			<img style="height: 110px;" src="/dist/img/calpers_logo.png" alt="logo" class="col-12">
 			</a>
 		  </div>
 		</div>
