--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -41,8 +41,8 @@ html { overflow-y: hidden; }
 }
 
 #loginbody >.container{
-	width: 80%;
-	height: 550px;
+	width: 70%;
+    height: 480px;
 	border: 2px solid #fff;
 	box-shadow: 0 15px 40px rgba(0,0,0,.5);
 }
@@ -57,6 +57,7 @@ html { overflow-y: hidden; }
 	float: left;
 	width: 45%;
 	height: 100%;
+	margin-left: -15px;
 	background: url(/dist/img/login.png);
 	background-size: cover;
 	box-sizing: border-box;
