SignUp Page changes
Added validation messages to DTO

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,158 +3,161 @@
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<title>Calpers | Registration Page</title>
+<!-- Tell the browser to be responsive to screen width -->
+<meta
+	content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
+	name="viewport">
 <link rel="stylesheet" type="text/css"
 	th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" />
-</head>
-<body>
-<header>
-<center>
-<img src="/img/calpers_logo.png">
 
-</center>
-</header> 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Calpers | Registration Page</title>
-  <!-- Tell the browser to be responsive to screen width -->
-  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-  <!-- Bootstrap 3.3.7 -->
-  <link rel="stylesheet" href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="../../bower_components/font-awesome/css/font-awesome.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="../../bower_components/Ionicons/css/ionicons.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="../../dist/css/AdminLTE.css">
-  <!-- iCheck -->
-  <link rel="stylesheet" href="../../plugins/iCheck/square/blue.css">
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
-  <!-- Google Font -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+<!-- Bootstrap 3.3.7 -->
+<link rel="stylesheet"
+	href="../../bower_components/bootstrap/dist/css/bootstrap.min.css">
+<!-- Font Awesome -->
+<link rel="stylesheet"
+	href="../../bower_components/font-awesome/css/font-awesome.min.css">
+<!-- Ionicons -->
+<link rel="stylesheet"
+	href="../../bower_components/Ionicons/css/ionicons.min.css">
+<!-- Theme style -->
+<link rel="stylesheet" href="../../dist/css/AdminLTE.css">
+<!-- iCheck -->
+<link rel="stylesheet" href="../../plugins/iCheck/square/blue.css">
+<!-- Google Font -->
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+<style>
+h1 {
+	text-align: center;
+}
+</style>
 </head>
 <body class="hold-transition register-page">
-<div class="register-box">
-  <div class="register-logo">
-    <a href="../../index2.html"><b></b></a>
-  </div>
+	<header>
+		<center>
+			<img src="/img/calpers_logo.png">
+		</center>
+	</header>
+	<div class="register-box">
+		<div class="register-logo">
+			<a href="../../index2.html"><b></b></a>
+		</div>
 
-  <div class="register-box-body">
-  <style>
-h1 {text-align: center;}
-   </style>
-  <h1 style="font-size:25px;">Registration</h1>
-  <form th:action="@{/registration}" th:object="${user}" method="post">
+		<div class="register-box-body">
 
-					<p class="error-message" th:if="${#fields.hasGlobalErrors()}"
-						th:each="error : ${#fields.errors('global')}" th:text="${error}">Validation
+			<h1 style="font-size: 25px;">Registration</h1>
+			<form th:action="@{/registration}" th:object="${user}" method="post">
+
+				<p class="error-message" th:if="${#fields.hasGlobalErrors()}"
+					th:each="error : ${#fields.errors('global')}" th:text="${error}">Validation
+					error</p>
+
+				<div class="form-group has-feedback"
+					th:classappend="${#fields.hasErrors('firstName')}? 'has-error':''">
+					<input type="text" class="form-control" placeholder="First name"
+						th:field="*{firstName}"> <span
+						class="glyphicon glyphicon-user form-control-feedback"></span>
+					<p class="error-message"
+						th:each="error : ${#fields.errors('firstName')}" th:text="${error}">Validation
 						error</p>
-  
-    
+				</div>
+				<div class="form-group has-feedback"
+					th:classappend="${#fields.hasErrors('lastName')}? 'has-error':''">
+					<input type="text" class="form-control" placeholder="Last name"
+						th:field="*{lastName}"> <span
+						class="glyphicon glyphicon-user form-control-feedback"></span>
+					<p class="error-message"
+						th:each="error : ${#fields.errors('lastName')}" th:text="${error}">Validation
+						error</p>
+				</div>
+				<div class="form-group has-feedback"
+					th:classappend="${#fields.hasErrors('contactNo')}? 'has-error':''">
+					<input type="text" class="form-control" placeholder="Contact No"
+						th:field="*{contactNo}"> <span
+						class="glyphicon glyphicon-earphone form-control-feedback"></span>
+					<p class="error-message"
+						th:each="error : ${#fields.errors('contactNo')}"
+						th:text="${error}">Validation error</p>
+				</div>
+				<div class="form-group has-feedback"
+					th:classappend="${#fields.hasErrors('email')}? 'has-error':''">
+					<input type="email" class="form-control" placeholder="Email"
+						th:field="*{email}"> <span
+						class="glyphicon glyphicon-envelope form-control-feedback"></span>
+					<p class="error-message"
+						th:each="error : ${#fields.errors('email')}" th:text="${error}">Validation
+						error</p>
+				</div>
+				<div class="form-group has-feedback"
+					th:classappend="${#fields.hasErrors('password')}? 'has-error':''">
+					<input type="password" class="form-control" placeholder="Password"
+						th:field="*{password}"> <span
+						class="glyphicon glyphicon-lock form-control-feedback"></span>
+					<p class="error-message"
+						th:each="error : ${#fields.errors('password')}" th:text="${error}">Validation
+						error</p>
 
-    <form action="../../index.html" method="post">
-      <div class="form-group has-feedback"
-	  th:classappend="${#fields.hasErrors('firstName')}? 'has-error':''">
-	  <input type="text" class="form-control" placeholder="First name" th:field="*{firstName}">
-	  <span class="glyphicon glyphicon-user form-control-feedback"></span>
-	  <p class="error-message"
-							th:each="error: ${#fields.errors('firstName')}"
-							th:text="${error}">Validation error</p>
-        </div>
-      <div class="form-group has-feedback"
-	  th:classappend="${#fields.hasErrors('lastName')}? 'has-error':''">
-        <input type="text" class="form-control" placeholder="Last name" th:field="*{lastName}">
-		<span class="glyphicon glyphicon-user form-control-feedback"></span>
-		<p class="error-message"
-							th:each="error : ${#fields.errors('lastName')}"
-							th:text="${error}">Validation error</p>
-      </div>
-	  <div class="form-group has-feedback"
-	  th:classappend="${#fields.hasErrors('contactNo')}? 'has-error':''">
-        <input type="text" class="form-control" placeholder="Contact No" th:field="*{contactNo}">
-        <span class="glyphicon glyphicon-earphone form-control-feedback"></span>
-		<p class="error-message"
-							th:each="error : ${#fields.errors('contactNo')}"
-							th:text="${error}">Validation error</p>
-      </div>
-      <div class="form-group has-feedback"
-	  th:classappend="${#fields.hasErrors('email')}? 'has-error':''">
-	   <input type="email" class="form-control" placeholder="Email" th:field="*{email}">
-        <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
-		<p class="error-message"
-							th:each="error : ${#fields.errors('email')}"
-							th:text="${error}">Validation error</p>
-        </div>
-      <div class="form-group has-feedback"
-	  th:classappend="${#fields.hasErrors('password')}? 'has-error':''">
-	  <input type="password" class="form-control" placeholder="Password"th:field="*{password}">
-        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-		<p class="error-message"
-							th:each="error : ${#fields.errors('password')}"
-							th:text="${error}">Validation error</p>
-		
-        </div>
-      
-      <div class="form-group has-feedback"
-	  th:classappend="${#fields.hasErrors('confirmPassword')}? 'has-error':''">
-        <input type="password" class="form-control" placeholder="Confirm password" th:field="*{confirmPassword}">
-        <span class="glyphicon glyphicon-lock form-control-feedback"></span>
-		<p class="error-message"
-							th:each="error : ${#fields.errors('confirmPassword')}"
-							th:text="${error}">Validation error</p>
-      </div>
-	  <div class="form-group has-feedback"
-	  th:classappend="${#fields.hasErrors('organization')}? 'has-error':''">
-	  <input type="text" class="form-control" placeholder="Organization" th:field="*{organization}">
-        <span class="fa fa-building form-control-feedback"></span>
-		<p class="error-message"
-							th:each="error : ${#fields.errors('organization')}"
-							th:text="${error}">Validation error</p>
-		
-      </div>
-      
-<div class="row">
-        <div class="form-group"
-		th:classappend="${#fields.hasErrors('terms')}? 'has-error':''">
-          <div class="checkbox icheck">
-            <label>
-              <input type="checkbox"> I agree to the Terms and Conditions
-            </label>
-			<p class="error-message"
-							th:each="error : ${#fields.errors('confirmPassword')}"
-							th:text="${error}">Validation error</p>
-          </div>
-        </div>
-      
-        <!-- /.col -->
-        <div class="col-xs-12">
-          <button type="submit" class="btn btn-primary btn-block btn-flat">Sign up</button>
-        </div>
-        <!-- /.col -->
-      </div>
-    </form>
-<!-- jQuery 3 -->
-<script src="../../bower_components/jquery/dist/jquery.min.js"></script>
-<!-- Bootstrap 3.3.7 -->
-<script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- iCheck -->
-<script src="../../plugins/iCheck/icheck.min.js"></script>
-<script>
-  $(function () {
-    $('input').iCheck({
-      checkboxClass: 'icheckbox_square-blue',
-      radioClass: 'iradio_square-blue',
-      increaseArea: '25%' /* optional */
-    });
-  });
-</script>
+				</div>
+
+				<div class="form-group has-feedback"
+					th:classappend="${#fields.hasErrors('confirmPassword')}? 'has-error':''">
+					<input type="password" class="form-control"
+						placeholder="Confirm password" th:field="*{confirmPassword}">
+					<span class="glyphicon glyphicon-lock form-control-feedback"></span>
+					<p class="error-message"
+						th:each="error : ${#fields.errors('confirmPassword')}"
+						th:text="${error}">Validation error</p>
+				</div>
+				<div class="form-group has-feedback"
+					th:classappend="${#fields.hasErrors('organization')}? 'has-error':''">
+					<input type="text" class="form-control" placeholder="Organization"
+						th:field="*{organization}"> <span
+						class="fa fa-building form-control-feedback"></span>
+					<p class="error-message"
+						th:each="error : ${#fields.errors('organization')}"
+						th:text="${error}">Validation error</p>
+
+				</div>
+
+				<div class="row">
+					<div class="form-group"
+						th:classappend="${#fields.hasErrors('terms')}? 'has-error':''">
+						<div class="checkbox icheck">
+							<label> <input type="checkbox"> I agree to the
+								Terms and Conditions
+							</label>
+							<p class="error-message"
+								th:each="error : ${#fields.errors('confirmPassword')}"
+								th:text="${error}">Validation error</p>
+						</div>
+					</div>
+
+					<!-- /.col -->
+					<div class="col-xs-12">
+						<button type="submit" class="btn btn-primary btn-block btn-flat">Sign
+							up</button>
+					</div>
+					<!-- /.col -->
+				</div>
+			</form>
+		</div>
+	</div>
+	<!-- jQuery 3 -->
+	<script src="../../bower_components/jquery/dist/jquery.min.js"></script>
+	<!-- Bootstrap 3.3.7 -->
+	<script src="../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+	<!-- iCheck -->
+	<script src="../../plugins/iCheck/icheck.min.js"></script>
+	<script>
+		$(function() {
+			$('input').iCheck({
+				checkboxClass : 'icheckbox_square-blue',
+				radioClass : 'iradio_square-blue',
+				increaseArea : '25%' /* optional */
+			});
+		});
+	</script>
 </body>
 </html>
