--- a/src/main/resources/templates/calperslogin.html
+++ b/src/main/resources/templates/calperslogin.html
@@ -21,58 +21,60 @@
 <body id="loginbody">
 	<header id="loginheader">
 		<div class="row">
-		  <div class="logo-row">
-		  	<a th:href="@{/}">
-			<img style="height: 110px;" src="/dist/img/calpers_logo.png" alt="logo" class="col-12">
-			</a>
-		  </div>
+			<div class="logo-row">
+				<a th:href="@{/}"> <img style="height: 110px;"
+					src="/dist/img/calpers_logo.png" alt="logo" class="col-12">
+				</a>
+			</div>
 		</div>
 	</header>
-	
+
 	<div class="container">
-		<div class = "left">
-		</div>
-		<div class = "right">
-		<div class="form-container">
-		<img src="dist/img/login-small.png" class="bg">
-			<h3 class="text-center font-weight-bold">Sign in</h3>
-			
-		<form th:action="@{/login}" method="post">
-			<div th:if="${param.error}">
-					<div class="alert alert-danger">Invalid username or
-						password.</div>
-				</div>
-				<div th:if="${param.logout}">
-					<div class="alert alert-info">You have been logged out.</div>
-				</div>			
-			
-			  <div class="form-group">
-				<label for="username">Username</label>: <input type="text"
+		<div class="left"></div>
+		<div class="right">
+			<div class="form-container">
+				<img src="dist/img/login-small.png" class="bg">
+				<h3 class="text-center font-weight-bold">Sign in</h3>
+
+				<form th:action="@{/login}" method="post">
+					<div th:if="${param.error}">
+						<div class="alert alert-danger">Invalid username or
+							password.</div>
+					</div>
+					<div th:if="${param.logout}">
+						<div class="alert alert-info">You have been logged out.</div>
+					</div>
+
+					<div class="form-group">
+						<label for="username">Username</label>: <input type="text"
 							id="username" name="username" class="form-control"
 							autofocus="autofocus" placeholder="Username" />
-			  </div>
-			  
-			  <div class="form-group">
-				<label for="password">Password</label>: <input type="password"
+					</div>
+
+					<div class="form-group">
+						<label for="password">Password</label>: <input type="password"
 							id="password" name="password" class="form-control"
 							placeholder="Password" />
-			  </div>
-			  
-			  <input type="submit" name="login-submit" id="login-submit" class="btn btn-primary btn-lg btn-block" value="Log In" />
-			<a href="#">I forgot my password</a>
-			<a class="register" th:href="@{/registration}" >Not a member yet?</a>
-		</form>
-		
-		
-		
+					</div>
+
+					<input type="submit" name="login-submit" id="login-submit"
+						class="btn btn-primary btn-lg btn-block" value="Log In" />
+						<div id="loginlinks" >
+						<a href="#">I forgot my password</a> 
+						<a class="register" th:href="@{/registration}">Not a member yet?</a>
+						</div>
+				</form>
+
+
+
+			</div>
 		</div>
-		</div>
-		</div>
-		</div>
+	</div>
+	</div>
 	<script type="text/javascript"
 		th:src="@{/webjars/jquery/3.2.1/jquery.min.js/}"></script>
 	<script type="text/javascript"
 		th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
 </body>
-</html>  
+</html>
 
